Fixed spacing

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -22,7 +22,7 @@
 .social-links{
     justify-content:right;
     margin-left: auto;
-    margin-right: 200px;
+    margin-right: 20px;
     gap: 15px;
 }
 
